<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_action">Check the status</string>
    <string name="notification_channel_id" translatable="false">loading_status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Glide">Glide - Image Loading Library by BumpTech</string>
    <string name="LoadApp">LoadApp - Current repository by Udacity</string>
    <string name="Retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="Image">Image Download</string>
    <string name="file_name">File Name:</string>
    <string name="file_name_text">Glide - Image Loading Library by BumpTech</string>
    <string name="status">Status:</string>
    <string name="status_text">Success</string>
    <string name="download_status_description">Download status</string>
    <string name="download_completed">Download complete</string>
    <string name="unknown">Unknown</string>
    <string name="download">Download</string>
    <string name="loading">Loading ...</string>

    <string name="message">Please select the file to download</string>
</resources>
