<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="24dp"
        app:layoutDescription="@xml/detail_motion"
        tools:context=".detail.DetailActivity"
        tools:showIn="@layout/activity_detail"
        >

        <TextView
            android:id="@+id/file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/file_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?attr/colorPrimaryDark"
            tools:text="@string/file_name_text"
            />

        <TextView
            android:id="@+id/download_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            />

        <TextView
            android:id="@+id/download_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?attr/colorPrimaryDark"
            tools:text="@string/status_text"
            />

        <ImageView
            android:id="@+id/download_status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/download_status_description"
            tools:srcCompat="@drawable/ic_download_done"
            tools:tint="?attr/colorPrimaryDark"
            />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="60dp"
            android:text="@android:string/ok"
            android:textColor="@android:color/white"
             />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>