<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/Image"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_download"
            />

        <RadioGroup
            android:id="@+id/download_option_radio_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/image"
            >

            <RadioButton
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Glide"
                />

            <RadioButton
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoadApp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />

            <RadioButton
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Retrofit"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />
        </RadioGroup>

        <com.udacity.loading.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:loadingDefaultBackgroundColor="?attr/colorPrimary"
            app:loadingBackgroundColor="?attr/colorPrimaryDark"
            app:loadingDefaultText="Download"
            app:loadingText="We are loading"
            app:loadingTextColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>